--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </header>
     <!------Main Section----->
     <main>
+        <!------Sidebar part----->
         <div class="container">
             <div class="aside">
                 <div class="button">
@@ -41,11 +42,216 @@
                     </div>
                 </div>
             </div>
+            <!------Blog part----->
             <div class="blogs">
-    
+                <article>
+                    <div class="featured-image">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-content">
+                        <div class="transfer-btn">
+                            <a href="#">Transfer</a>
+                        </div>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="icon-section">
+                            <div class="clock">
+                                <i class="fa-solid fa-clock"></i>
+                                <p>10h</p>
+                            </div>
+                            <div class="chat">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                <p>23</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="featured-image">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-content">
+                        <div class="transfer-btn">
+                            <a href="#">Transfer</a>
+                        </div>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="icon-section">
+                            <div class="clock">
+                                <i class="fa-solid fa-clock"></i>
+                                <p>10h</p>
+                            </div>
+                            <div class="chat">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                <p>23</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="featured-image">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-content">
+                        <div class="transfer-btn">
+                            <a href="#">Transfer</a>
+                        </div>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="icon-section">
+                            <div class="clock">
+                                <i class="fa-solid fa-clock"></i>
+                                <p>10h</p>
+                            </div>
+                            <div class="chat">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                <p>23</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="featured-image">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-content">
+                        <div class="transfer-btn">
+                            <a href="#">Transfer</a>
+                        </div>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="icon-section">
+                            <div class="clock">
+                                <i class="fa-solid fa-clock"></i>
+                                <p>10h</p>
+                            </div>
+                            <div class="chat">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                <p>23</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="featured-image">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-content">
+                        <div class="transfer-btn">
+                            <a href="#">Transfer</a>
+                        </div>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="icon-section">
+                            <div class="clock">
+                                <i class="fa-solid fa-clock"></i>
+                                <p>10h</p>
+                            </div>
+                            <div class="chat">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                <p>23</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="featured-image">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-content">
+                        <div class="transfer-btn">
+                            <a href="#">Transfer</a>
+                        </div>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="icon-section">
+                            <div class="clock">
+                                <i class="fa-solid fa-clock"></i>
+                                <p>10h</p>
+                            </div>
+                            <div class="chat">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                <p>23</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="featured-image">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-content">
+                        <div class="transfer-btn">
+                            <a href="#">Transfer</a>
+                        </div>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="icon-section">
+                            <div class="clock">
+                                <i class="fa-solid fa-clock"></i>
+                                <p>10h</p>
+                            </div>
+                            <div class="chat">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                <p>23</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="featured-image">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-content">
+                        <div class="transfer-btn">
+                            <a href="#">Transfer</a>
+                        </div>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="icon-section">
+                            <div class="clock">
+                                <i class="fa-solid fa-clock"></i>
+                                <p>10h</p>
+                            </div>
+                            <div class="chat">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                <p>23</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article>
+                    <div class="featured-image">
+                        <img src="images/Blog Image.png" alt="">
+                    </div>
+                    <div class="blog-content">
+                        <div class="transfer-btn">
+                            <a href="#">Transfer</a>
+                        </div>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="icon-section">
+                            <div class="clock">
+                                <i class="fa-solid fa-clock"></i>
+                                <p>10h</p>
+                            </div>
+                            <div class="chat">
+                                <i class="fa-solid fa-comment-dots"></i>
+                                <p>23</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
             </div>
         </div>
-        
+        <div class="tablet-btn">
+            <a href="#">View More<i class="fa-solid fa-angle-right"></i></a>
+        </div>
     </main>
+    <!-------Footer section-->
+    <footer>
+        <div class="container">
+            <h2>Goal</h2>
+            <div class="menu">
+                <a href="#">Contact Us</a>
+                <a href="#">Terms of Service</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Privacy Settigs</a>
+                <a href="#">Goal App</a>
+                <a href="#">Goal Live</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
