--- a/match.html
+++ b/match.html
@@ -32,13 +32,13 @@
             <div class="aside">
                 <div class="button">
                     <div class="upcoming">
-                        <a href="#">Upcoming Match</a>
+                        <a href="match.html" style="background: #C5357F; color: #fff;">Upcoming Match</a>
                     </div>
                     <div class="all">
                         <a href="#">All Group</a>
                     </div>
                     <div class="blog">
-                        <a href="#">Blog</a>
+                        <a href="index.html" target="_blank">Blog</a>
                     </div>
                 </div>
             </div>
