--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="left-content">
                 <h1>The Greatest show on the earth</h1>
-                <p>The 2022 FIFA World Cup is scheduled to be the 22nd running of the FIFA World Cup competition, the quadrennial international men's football championship contested by the senior national teams of the member associations of FIFA. </p>
+                <p>The 2022 FIFA World Cup is scheduled to be the 22nd running of the FIFA World Cup competition. </p>
                 <a class="live-link" href="#">Watch Live<i class="fa-solid fa-angle-right"></i></a>
             </div>
             <div class="right-image">
@@ -37,8 +37,8 @@
                     <div class="all">
                         <a href="#">All Group</a>
                     </div>
-                    <div class="blog">
-                        <a href="index.html" style="background: #C5357F; color: #fff;">Blog</a>
+                    <div class="blog" id="blog">
+                        <a href="index.html" style="background: #C5357F; color: #fff; ">Blog</a>
                     </div>
                 </div>
             </div>
